GPOL-002: make published forms available to participants
